# JMC-Maths

./: .gitignore  CMakeLists.txt  README.md  a.out
.zed/: settings.json
include/: LinearSystem.h  classTraits.h  columnVector.h  include.h  jmcmaths  linearEquation.h  matrix.h  operations.h  polynomial.h  utilities.h  vectorSets.h
src/: LinearSystem.cpp  classTraits.h  columnVector.cpp  linearEquation.cpp  main.cpp  matrix.cpp  operations.cpp  polynomial.cpp  utilities.cpp  vectorSets.cpp
tests/: matrix_tests.cc
